%% Diagrama E-R del proyecto ProyectoBD (actualizado desde Dump20260728.sql)
erDiagram
    USUARIOS {
        INT id_usuario PK
        VARCHAR email
        VARCHAR password
        VARCHAR nombre
        VARCHAR telefono
        VARCHAR estado
        DATETIME creado_en
    }

    BANCOS {
        INT id_banco PK
        VARCHAR nombre
        VARCHAR codigo
        VARCHAR estado
    }

    CUENTAS_EMPRESA {
        INT id_cuenta PK
        INT id_banco FK
        VARCHAR numero_cuenta
        VARCHAR rif
        VARCHAR razon_social
        VARCHAR telefono
        VARCHAR estado
    }

    ROLES_ASIGNADOS {
        INT id_rol PK
        INT id_usuario FK
        VARCHAR rol
    }

    CHOFERES {
        INT id_chofer PK
        INT id_usuario FK
        INT id_banco FK NULL
        VARCHAR nro_cuenta_banco
        DECIMAL saldo
    }

    CLIENTES {
        INT id_cliente PK
        INT id_usuario FK
        DECIMAL saldo
    }

    CONTACTOS_EMERGENCIA {
        INT id_contacto PK
        INT id_chofer FK
        VARCHAR nombre
        VARCHAR telefono
        VARCHAR relacion
    }

    VEHICULOS {
        INT id_vehiculo PK
        VARCHAR placa
        VARCHAR marca
        VARCHAR modelo
        INT ano
        INT id_chofer FK
        TINYINT activo
    }

    ZONAS {
        INT id_zona PK
        VARCHAR nombre
        DECIMAL lat
        DECIMAL lng
        TINYINT activo
    }

    TRASLADOS {
        INT id_traslado PK
        INT id_cliente FK
        INT id_chofer FK NULL
        INT id_pago_chofer FK NULL
        INT id_vehiculo FK NULL
        INT id_zona_origen FK
        INT id_zona_destino FK
        DECIMAL precio
        DATETIME solicitado_en
        VARCHAR estado
        INT distancia
    }

    PAGO_CHOFER {
        INT id_pago PK
        INT id_banco FK
        INT id_chofer FK
        INT id_personal_fk FK
        VARCHAR nro_cuenta
        DECIMAL monto
        VARCHAR referencia
        DATETIME fecha
    }

    EVALUACIONES_CHOFERES {
        INT id_evaluacion PK
        INT id_chofer FK
        INT id_personal FK
        DECIMAL puntaje
        DATETIME creado_en
        DATE fecha_revision
        VARCHAR estado
        TEXT comentario
    }

    EVALUACIONES_VEHICULOS {
        INT id_evaluacionv PK
        INT id_vehiculo FK
        INT id_personal FK
        DECIMAL puntaje
        DATETIME creado_en
        DATE fecha_revision
        VARCHAR estado
        TEXT comentario
    }

    RECARGAS {
        INT id_recarga PK
        INT id_cliente FK
        INT id_cuenta FK
        DECIMAL monto
        VARCHAR referencia
        DATE fecha
        DATETIME creado_en
    }

    TASA {
        INT id PK
        DECIMAL valor
        DATETIME fecha_actualizacion
        VARCHAR origen
    }

    %% Relaciones (basadas en claves foráneas del dump)
    USUARIOS ||--o{ ROLES_ASIGNADOS : "asigna"
    USUARIOS ||--o{ CHOFERES : "perfil"
    USUARIOS ||--o{ CLIENTES : "perfil"
    BANCOS ||--o{ CUENTAS_EMPRESA : "provee"
    BANCOS ||--o{ CHOFERES : "banco"
    CUENTAS_EMPRESA ||--o{ RECARGAS : "recibe"
    CLIENTES ||--o{ RECARGAS : "realiza"
    CHOFERES ||--o{ CONTACTOS_EMERGENCIA : "tiene"
    CHOFERES ||--o{ VEHICULOS : "opera"
    ZONAS ||--o{ TRASLADOS : "origen/destino"
    CLIENTES ||--o{ TRASLADOS : "solicita"
    CHOFERES ||--o{ TRASLADOS : "ejecuta"
    TRASLADOS ||--o{ PAGO_CHOFER : "puede generar"
    PAGO_CHOFER ||--|| CHOFERES : "paga"
    PAGO_CHOFER ||--o{ TRASLADOS : "asocia (opcional)"
    TRASLADOS ||--|| RECARGAS : "no_directa"
    TRASLADOS ||--o{ EVALUACIONES_CHOFERES : "genera"
    VEHICULOS ||--o{ EVALUACIONES_VEHICULOS : "genera"
    TASA ||--|| RECARGAS : "referencia (opcional)"
